--- a/summary.tex
+++ b/summary.tex
@@ -1,11 +1,16 @@
 The findings of this work allowed the authors to formulate the following conclusions:
 \begin{itemize}
+  \item[\textbullet]Among all tested applications IPF is the least I/O demanding. For the reference architecture it shows scalability up to 700 cores. On the other hand, other selected processors scale in the range of the number of physical cores so we expect that using them in a multinode configuration will result in similar behaviour as for the reference testbed.
   \item[\textbullet]Green Growth-pilot applications are dominated by I/O operations (mostly output) where a large HDF5 file is created and to which all processes save data;
-  \item[\textbullet]CCTM is also heavily I/O dependent;
+  \item[\textbullet]Results obtained for ABMS4py – another social simulation application prove it should be subject to major improvements. For instance, the best execution time on Intel\textregistered\ Xeon\textregistered\ Gold 6140 is observed for only 9 MPI processes, whereas the testbed includes 72 physical cores (2-node configuration with 2 chips each, 18 cores per one chip)
+  \item[\textbullet]OpenSWPC benchmark for given input configuration reports good scalability. It is especially illuminative in case of the reference testbed where the execution time decreases along number of cores used until maximum number of 1400 is used. Other processors show similar behaviour. Using hyper threads (where possible) does not provide any further time improvements.
+  \item[\textbullet]CCTM is I/O dominated (especially output) application and, thus, the impact on the execution times is high
+  \item[\textbullet]CM1 results indicate a relationship between the problem size (weather map grid) and the processors mesh, as well as the dependence between the number of threads and nesting of cores in different levels of cache. 
+  \item[\textbullet]HWRF demonstrates very similar results to CM1 in terms of scalability on processors equipped with the implementation of simultaneous multithreading 
   \item[\textbullet]Best execution times are usually achieved (when considering single nodes) for the number of processes equal to the number of cores: 64 for 2-node ARM Hi1616 and 1-node AMD Epyc\textsuperscript{TM}, 72 for 2-node Intel\textregistered\ Xeon\textregistered\ Gold 6140, 20 for 2-processor 1-node Power8+;
   \item[\textbullet]In most cases hyper threading does not bring any performance improvements.
 \end{itemize}
-
+\  \\
 For the final comparative analysis two additional metrics have been introduced: 
 \begin{itemize}
   \item[\textbullet]\textit{Energy efficiency} calculated as a product of walltimes and TDP products which scales and binds the achieved timing results by processors by the theoretical heat generated during the tests and/or the energy consumed by processors.
@@ -151,7 +156,6 @@ For the final comparative analysis two additional metrics have been introduced:
  \caption{Benchmarking summary results}
 \end{figure*}
 
-
 In the scope of \textit{aggregated execution times} for the given number of cores it can be noted that in the whole range of the number of cores the winner is Intel\textregistered\ Xeon\textregistered\ Gold 6140 (Figure~\subref{fig:rankarchspercore}). Surprisingly, the AMD Epyc\textsuperscript{TM} is slower than the ARM Hi1616 when 64 or more cores are used and is also slower than the reference Intel\textregistered Xeon\textregistered\ E5-2697 when 9 or more cores are used.
 
 
@@ -165,7 +169,7 @@ For the \textit{estimated cumulative energy consumption} (calculated as a sum of
 The estimated power consumption chart is a good point of view when talking about green HPC computing. The presented results not exact, because they are dictated only by the estimated values based on the CPU's TDP. Nevertheless, assuming that all architectures use the same memory model - DDR4, it can be considered that most of the energy consumed is the energy utilized by the processor. In this scope, the best energy consumption ratio is characterized by the ARM architecture, which is absolutely designed for energy-saving solutions that is also widely used in mobile devices. The results for the new Intel Skylake architecture were a big surprise, which took the second place with a very similar result of about 20\% more. The AMD Epyc\textsuperscript{TM} presented a much worse result, but from our observations its internal architecture is better suited to applications in which I/O systems play an important role.
 
 Another valuable finding is based on GSS cost efficiency analysis (Figure~\subref{fig:costefficiency}). ARM Hi1616 turned out to be approximately 9 times better than for Power8+ and 15 times better than the reference Intel\textregistered\ Xeon\textregistered\ E5-2697 processor, mostly due to its small number of expensive cores and relatively middling timing results.
-Additionally, when talking about general processor characteristics extracted from all the tests performed, IBM Power8+ demonstrates particularly good performance for the applications with a big number of I/O such as Pandora, OpenSWPC, CMAQ/CCTM. The best results are obtained when the total output dominates over the input and RAM consumption. In many cases, it outperforms ARM Hi1616, Intel\textregistered\ Xeon\textregistered\ E5-2697, and AMD Epyc\textsuperscript{TM} for I/O intensive applications. On the other hand, Power8+ shows worse results than the above-mentioned processors if the applications are computationally extensive while producing a relatively small amount of output. This is the case of the IPF and ABMS applications. On all processors, all benchmarks show the highest efficiency if the number of MPI processes is between 2 and the total number of physical cores. After that, the efficiency usually drops remarkably as HT is not utilised properly. At the same time, quite often the highest speedup is reached when the number of MPI processes is significantly more than 20. It would be interesting to perform the tests on the testbeds including more nodes. 
+Additionally, when talking about general processor characteristics extracted from all the tests performed, IBM Power8+ demonstrates particularly good performance for the applications with a big number of I/O such as Pandora, OpenSWPC, CMAQ/CCTM. The best results are obtained when the total output dominates over the input and RAM consumption. In many cases, it outperforms ARM Hi1616, Intel\textregistered\ Xeon\textregistered\ E5-2697, and AMD Epyc\textsuperscript{TM} for I/O intensive applications. On the other hand, Power8+ shows worse results than the above-mentioned processors if the applications are computationally extensive while producing a relatively small amount of output. This is the case of the IPF and ABMS applications. On all processors, all benchmarks show the highest efficiency if the number of MPI processes is between 2 and the total number of physical cores. After that, the efficiency usually drops remarkably as hyper threading is not utilised properly. At the same time, quite often the highest speedup is reached when the number of MPI processes is significantly more than 20. It would be interesting to perform the tests on the testbeds including more nodes. 
 
 
 
