--- a/cfdapps_plots.tex
+++ b/cfdapps_plots.tex
@@ -1,5 +1,5 @@
 %% 1 row - OpenSWPC
-\begin{figure}[H]
+\begin{figure}[tphb]
   \centering
   \iffalse
   \begin{subfigure}[t]{0.48\textwidth}
@@ -45,7 +45,7 @@
           log ticks with fixed point,
           scaled y ticks=real:1e3
           axis lines = left,
-          %xlabel = \#MPI ranks,
+          xlabel = \#MPI ranks,
           ylabel = {Walltime [s]},
           %            legend style={at={(0.5,-0.2)},
           %            	    anchor=north,legend columns=1},
@@ -114,7 +114,7 @@
           %    width=1\textwidth,
           axis y line*=left,
           axis lines = left,
-          %xlabel = \#MPI ranks,
+          xlabel = \#MPI ranks,
           ylabel = {Walltime [s]},
           xmajorgrids=true,
           ymajorgrids=true,
@@ -190,7 +190,7 @@
           log ticks with fixed point,
           scaled y ticks=real:1e3
           axis lines = left,
-          %xlabel = \#MPI ranks,
+          xlabel = \#MPI ranks,
           ylabel = {Walltime [s]},
           %        legend style={at={(0.5,-0.2)},
           %        	    anchor=north,legend columns=1},
@@ -260,7 +260,7 @@
           %    width=1\textwidth,
           axis y line*=left,
           axis lines = left,
-          %xlabel = \#MPI ranks,
+          xlabel = \#MPI ranks,
           ylabel = {Walltime [s]},
           xmajorgrids=true,
           ymajorgrids=true,
@@ -334,7 +334,7 @@
           log ticks with fixed point,
           scaled y ticks=real:1e3
           axis lines = left,
-          %xlabel = \#MPI ranks,
+          xlabel = \#MPI ranks,
           ylabel = {Walltime [s]},
           %            legend style={at={(0.5,-0.2)},
           %            	    anchor=north,legend columns=1},
@@ -404,7 +404,7 @@
           %    width=1\textwidth,
           axis y line*=left,
           axis lines = left,
-          %xlabel = \#MPI ranks,
+          xlabel = \#MPI ranks,
           ylabel = {Walltime [s]},
           xmajorgrids=true,
           ymajorgrids=true,
@@ -480,7 +480,7 @@
           log ticks with fixed point,
           scaled y ticks=real:1e3
           axis lines = left,
-          %xlabel = \#MPI ranks,
+          xlabel = \#MPI ranks,
           ylabel = {Walltime [s]},
           %           legend style={at={(0.5,-0.2)},
           %            	    anchor=north,legend columns=1},
@@ -526,7 +526,7 @@
       \begin{axis}[width=.9\textwidth,height=.75\textwidth,
           axis y line*=left,
           axis lines = left,
-          %xlabel = \#MPI ranks,
+          xlabel = \#MPI ranks,
           ylabel = {Walltime [s]},
           xmajorgrids=true,
           ymajorgrids=true,
@@ -587,7 +587,7 @@
     \caption{HWRF on Intel\textregistered\ Xeon\textregistered\ Gold 6140}
     \label{fig:hwrf_gold}
   \end{subfigure}\bigbreak
-  \label{fig:socapps_plots}
   \caption{Results for CFD applications}
+  \label{fig:cfdapps_plots}
 \end{figure}
 
