--- a/example.bib
+++ b/example.bib
@@ -492,3 +492,18 @@ doi={10.1038/s41598-017-13828-9},
 url={https://doi.org/10.1038/s41598-017-13828-9}
 }
 
+@article{2019:power8_cfd_bench,
+author="Moreno, R.
+and Arias, E.
+and Navarro, A.
+and Tapiador, F. J.",
+title="How good is the OpenPOWER architecture for high-performance CPU-oriented weather forecasting applications?",
+journal="The Journal of Supercomputing",
+year="2019",
+month="Apr",
+day="04",
+abstract="Performance, i.e., execution times, is one of the most important features of HPC software, but energy consumption is also growing in importance if we intend to extend application to Exascale. This is the case of HPC software used in weather forecasting, in which every ounce of performance is critical in order to increase the accuracy and precision of its results. In this work, we study the performance-energy balance of an OpenPOWER processor, which is designed for the high workloads typically seen on data servers and HPC environments. Our results show that the OpenPOWER processor is superior in performance in weather forecast workloads compared to other processors commonly used in HPC, but at the expense of consuming more energy. Furthermore, the highest hyperthreading modes available on OpenPOWER processors do not perform well with HPC workloads and are even detrimental to performance.",
+issn="1573-0484",
+doi="10.1007/s11227-019-02844-3",
+url="https://doi.org/10.1007/s11227-019-02844-3"
+}
